--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Blog</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/blog.css?crc=4262204671" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/blog.css?crc=4126995117" id="pagesheet"/>
    </head>
  <body>
 
@@ -24,7 +24,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="browser_width grpelem" id="u2828-bw">
     <div class="museBGSize" id="u2828"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="570" data-content-above-spacer="570" data-content-below-spacer="409"></div>
+   <div class="verticalspacer" data-offset-top="442" data-content-above-spacer="441" data-content-below-spacer="409"></div>
    <div class="clearfix grpelem" id="pu2647"><!-- column -->
     <div class="browser_width colelem" id="u2647-bw">
      <div id="u2647"><!-- simple frame --></div>
@@ -35,10 +35,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <img class="colelem" id="u2779-4" alt="&nbsp;Blog" width="512" height="72" src="images/u2779-4.png?crc=4121892142"/><!-- rasterized frame -->
        <div class="clearfix colelem" id="pu2782-8"><!-- group -->
         <img class="grpelem" id="u2782-8" alt="Page under construction. For the moment refer to my articles on termcoord.eu" width="871" height="73" src="images/u2782-8.png?crc=471762391"/><!-- rasterized frame -->
+        <a class="nonblock nontext grpelem" id="u2788" href="https://termcoord.eu/?s=cosimo+palma&amp;cat=0"><!-- simple frame --></a>
         <a class="nonblock nontext grpelem" id="u2916" href="https://termcoord.eu/?s=cosimo+palma&amp;cat=0"><!-- simple frame --></a>
        </div>
-       <div class="clearfix colelem" id="pu2788"><!-- group -->
-        <a class="nonblock nontext grpelem" id="u2788" href="https://termcoord.eu/?s=cosimo+palma&amp;cat=0"><!-- simple frame --></a>
+       <div class="clearfix colelem" id="pu2791-4"><!-- group -->
         <img class="grpelem" id="u2791-4" alt="Go back to home" width="322" height="37" src="images/u2791-4.png?crc=4080462622"/><!-- rasterized frame -->
         <a class="nonblock nontext grpelem" id="u2794" href="index.html"><!-- simple frame --></a>
        </div>
