--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="clearfix" id="u2761_align_to_page">
        <img class="colelem" id="u2767-4" alt="Projects" width="465" height="104" src="images/u2767-4.png?crc=429970113"/><!-- rasterized frame -->
        <img class="pointer_cursor colelem" id="u2770-9" alt="Page under construction. For the moment refer to my Github repository." width="1002" height="100" src="images/u2770-9.png?crc=4259972718"><!-- rasterized frame -->
-        <a class="block" href="index.html"><!-- Block link tag --></a>
+        <a class="block" href="https://github.com/Glottocrisio"><!-- Block link tag --></a>
        </img>
        <a class="nonblock nontext colelem" id="u2806" href="https://github.com/Glottocrisio"><!-- simple frame --></a>
        <div class="pointer_cursor clearfix colelem" id="u2797"><!-- group -->
