--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ height:346px;
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2492" href="https://www.unina.it/en_GB/-/1485101-filosofia"><!-- simple frame --></a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2495" href="https://www.uni-duesseldorf.de/home/en/home.html"><!-- simple frame --></a>
         </div>
-        <img class="colelem" id="u2536-4" alt="INSTITUTIONS AND COMPANIES I WORKED FOR" width="918" height="140" src="images/u2536-4.png?crc=3899150377"/><!-- rasterized frame -->
+        <img class="colelem" id="u2536-4" alt="INSTITUTIONS AND COMPANIES I WORKED FOR" width="918" height="140" src="images/u2536-4.png"/><!-- rasterized frame -->
         <div class="clearfix colelem" id="pu2539"><!-- group -->
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2539" href="https://www.eurocontrol.int"><!-- simple frame --></a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2545" href="https://termcoord.eu"><!-- simple frame --></a>
