--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ height:346px;
         <div class="clearfix colelem" id="pu2539"><!-- group -->
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2539" href="https://www.eurocontrol.int"><!-- simple frame --></a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2545" href="https://termcoord.eu"><!-- simple frame --></a>
-         <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u7768" href="https://fenetech.com/"><!-- simple frame --></a>
+         <!-- <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u7768" href="https://fenetech.com/"></a> --> <!-- simple frame -->
         </div>
         <div class="clearfix colelem" id="pu2378"><!-- group -->
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2378" href="https://independent.academia.edu/PalmaCosimo"><!-- simple frame --></a>
