--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@ height:346px;
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2492" href="https://www.unina.it/en_GB/-/1485101-filosofia"><!-- simple frame --></a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2495" href="https://www.uni-duesseldorf.de/home/en/home.html"><!-- simple frame --></a>
         </div>
-        <img class="colelem" id="u2536-4" alt="INSTITUTIONS AND COMPANIES I WORKED FOR" width="1100" height="140" src="images/u2536-4.png"/><!-- rasterized frame -->
+        <img class="colelem" id="u2536-4" alt="INSTITUTIONS AND COMPANIES I WORKED FOR" width="932" height="140" src="images/u2536-4.png"/><!-- rasterized frame -->
         <div class="clearfix colelem" id="pu2539"><!-- group -->
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2539" href="https://www.eurocontrol.int"><!-- simple frame --></a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2545" href="https://termcoord.eu"><!-- simple frame --></a>
-         <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u7768" href="https://fenetech.com/"> <!-- simple frame --></a> 
+         <!--<a class="nonblock nontext museBGSize rounded-corners grpelem" id="u7768" href="https://fenetech.com/"> </a> <!-- simple frame -->
         </div>
         <div class="clearfix colelem" id="pu2378"><!-- group -->
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2378" href="https://independent.academia.edu/PalmaCosimo"><!-- simple frame --></a>
