--- a/index.html
+++ b/index.html
@@ -60,12 +60,7 @@ height:346px;
         </div>
         <img class="colelem" id="u809-20" alt="ABOUT In order of importance: My name is Cosimo; Naples has been for me the origin, the hell and the heaven, a twenty-two years long skin-caponising pyroclastic yet anesthetizing still puzzling enantiodromia from which I needed a break. I live in Trier for seven years, during which I worked, studied, graduated, made many friends and eventually got married to a sweet vietnamese bánh bao. My first education-related work-experience has been at the Eurocontrol in Kirchberg, where as Web Developer trainee I supported the agency´s Trainingzone website. Afterwards I became a Schuman Trainee at European Parliament in Luxembourg, where I worked as Webmaster of the official website for the Terminology Unit. One year and three months long I have been ERP Implementation Technician at FeneTech Europe. I studied philosophy, historical philosophy, philosophical history and history in the redundant Naples, computational linguistics and informatics in the city of Marx. Language enthusiast and chess player in the free time, I want to find any way to connect art and science, entropy and exactness, both in my work and in myself. Currently I am a PhD student by the Italian National program in Artificial Intelligence, with a project about Automtic  Story Generation for Cultural Heritage." width="1107" height="662" src="images/u809-20.png"/><!-- rasterized frame -->
         <img class="colelem" id="u2533-4" alt="Universities where I studied" width="1097" height="166" src="images/u2533-4.png?crc=206298936"/><!-- rasterized frame -->
-      <!--   <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u9786" href="https://sites.google.com/view/unior-nlp-research-group/home?pli=1"><!-- simple frame </a> --> 
-       <!--  <div class="clearfix colelem" id="pu249"><!-- group -->
-      <!--    <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u9878" href="https://www.unipi.it/"><!-- simple frame </a>-->
-       <!--   <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u9878" href="https://www.unior.it/"><!-- simple frame </a> -->
-       <!--   <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u9878" href="https://https://sites.google.com/view/unior-nlp-research-group/"><!-- simple frame </a> --> 
-        </div>
+      
         <div class="clearfix colelem" id="pu2498"><!-- group -->
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2498" href="https://www.uni-trier.de/index.php?id=68009"><!-- simple frame --></a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2492" href="https://www.unina.it/en_GB/-/1485101-filosofia"><!-- simple frame --></a>
@@ -74,7 +69,7 @@ height:346px;
         <div class="clearfix colelem" id="pu2498"><!-- group -->
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2497" href="https://www.unipi.it/"> </a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2499" href="https://www.unior.it/"> </a>
-         <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2496" href="https://wwwen.uni.lu/">  </a>
+         <!--<a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2496" href="https://wwwen.uni.lu/">  </a> -->
         </div>
         <img class="colelem" id="u2536-4" alt="INSTITUTIONS AND COMPANIES I WORKED FOR" width="932" height="140" src="images/u2536-4.png"/><!-- rasterized frame -->
         <div class="clearfix colelem" id="pu2539"><!-- group -->
