--- a/index.html
+++ b/index.html
@@ -83,17 +83,19 @@ height:346px;
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2947" href="https://www.linkedin.com/in/cosimo-palma-07733a162/"><!-- simple frame --></a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2360" href="https://twitter.com/glottocrisio"><!-- simple frame --></a>
         </div>
+        <div class="clearfix colelem" id="pu2379"><!-- group -->
+         <form method="post" action="form_email.php">
+            <label for="name">Name:</label><br>
+            <input type="text" name="name" required><br>
+            <label for="email">Email:</label><br>
+            <input type="email" name="email" required><br>
+            <label for="message">Message:</label><br>
+            <textarea name="message" rows="5" required></textarea><br><br>
+            <input type="submit" value="Submit">
+         </form> 
+        </div>
        </div>
       </div>
-          <form method="post" action="form_email.php">
-             <label for="name">Name:</label><br>
-             <input type="text" name="name" required><br>
-             <label for="email">Email:</label><br>
-             <input type="email" name="email" required><br>
-             <label for="message">Message:</label><br>
-             <textarea name="message" rows="5" required></textarea><br><br>
-             <input type="submit" value="Submit">
-          </form> 
      </div>
      <div class="browser_width grpelem" id="u1281-bw">
       <div id="u1281"><!-- simple frame --></div>
