--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ height:346px;
         <div class="clearfix colelem" id="pu2498"><!-- group -->
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2497" href="https://www.unipi.it/"> </a>
          <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2499" href="https://www.unior.it/"> </a>
-         <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2496" href="https://wwwen.uni.lu/">  </a> 
+         <!-- <a class="nonblock nontext museBGSize rounded-corners grpelem" id="u2496" href="https://wwwen.uni.lu/">  </a> -->
         </div>
         <img class="colelem" id="u2536-4" alt="INSTITUTIONS AND COMPANIES I WORKED FOR" width="932" height="140" src="images/u2536-4.png"/><!-- rasterized frame -->
         <div class="clearfix colelem" id="pu2539"><!-- group -->
